更新git相关笔记

--- a/计算机基础知识/计网相关.md
+++ b/计算机基础知识/计网相关.md
@@ -15,3 +15,11 @@ localhost和127.0.0.1的区别是什么?
 使用vue起项目时，在一个内网的环境中，起来的服务器会返回项目可访问的地址,一个是localhost，另一个是内网地址：192.168.1.70,这是如果通过localhost进行访问，可能会出现跨域错误。
 
 > 跨域：协议、域名、端口号有一个不同就是跨域
+
+
+
+
+# 内网穿透
+
+使用NAT技术搭建内网时，外网通过路由器/交换机等与本地电脑进行交互。
+在这种情况下，如果我们想要外网直接访问本地服务器，就需要使用到内网穿透。
